@@ -229,7 +229,7 @@ gint document_replace_all(GeanyDocument *doc, const gchar *find_text, const gcha
 void document_replace_sel(GeanyDocument *doc, const gchar *find_text, const gchar *replace_text, gint flags,
 						  gboolean escaped_chars);
 
-void document_update_tag_list(GeanyDocument *doc, gboolean update);
+void document_update_tag_list(GeanyDocument *doc, gboolean update, gboolean update_parent);
 
 void document_set_encoding(GeanyDocument *doc, const gchar *new_encoding);
 
