@@ -1,3 +1,10 @@
+2011-03-28  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * src/document.c, src/document.h, src/editor.c, src/keybindings.c:
+   Don't update parent WorkObjects when updating one in real-time. This
+   should fix some performance issues if a WorkObject has many parents.
+
+
 2011-03-27  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/makefile.win32, src/main.c, src/Makefile.am, configure.ac,
